# rust-azure-cost

./: .env.template  Cargo.toml  README.md
src/: main.rs
src/azure/: cost_managment_example.rs  mod.rs
src/my_cli/: handler.rs  mod.rs
src/open_ai/: mod.rs
