[package]
name = "cost-analyzer-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = "0.13.0"
azure_identity = "0.13.0"
clap = { version = "4.3.11", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
url = "2.4.0"
# clap = "3.0.0-beta.2"
