[package]
name = "cost-analyzer-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.71"
azure_core = "0.13.0"
azure_identity = "0.13.0"
azure_mgmt_costmanagement = "0.13.0"
body = "0.1.1"
chrono = "0.4.26"
clap = { version = "4.3.11", features = ["derive"] }
oauth2 = "4.4.1"
openai-rust = "0.5.0"
reqwest = {version="0.11.18", features=["json"]}
serde_json = "1.0.100"
tokio = { version = "1", features = ["full"] }
url = "2.4.0"
